<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_crea_pedido"
            android:title="@string/txt_crear_pedido_drawer_menu" />
        <item
            android:id="@+id/nav_mis_pedidos"
            android:title="@string/txt_mis_pedidos_drawer_menu" />
        <item
            android:id="@+id/nav_perfil"

            android:title="@string/txt_perfil_drawer_menu" />
        <item
            android:id="@+id/nav_ofertas"

            android:title="@string/txt_ofertas_drawer_menu" />
        <item
            android:id="@+id/nav_pizzas"

            android:title="@string/txt_pizzas_drawer_menu" />
    </group>

    <item android:title="@string/tix_sobre_nosotros_drawer_menu">
        <menu>
            <item
                android:id="@+id/nav_contacto"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/tit_contacta_con_nosotros_drawer_menu" />
        </menu>
    </item>

</menu>
