<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Carlos Solana. Todos los derechos reservados.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/nombre_comp_pedido"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center_vertical|center_horizontal"
        android:text="" />

    <Button
        android:id="@+id/anadir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_weight="1"
        android:text="@string/char_mas" />

    <TextView
        android:id="@+id/cantidad_comp_pedido"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/default_0_rec_crea_pedido" />

    <Button
        android:id="@+id/quitar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_weight="1"
        android:text="@string/char_menos" />

</LinearLayout>