<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Carlos Solana. Todos los derechos reservados.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_generico"
    tools:context=".fragments.SubFragments.Sub_Opciones_Pago">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/spMetPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/contPaypal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tit_user_paypal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_correo_electronico_opc_pago" />

            <EditText
                android:id="@+id/email_paypal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tit_pass_paypal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_contrasena_paypal_opc_pago" />

            <EditText
                android:id="@+id/pass_paypal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/checkBox_paypal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Acepto el uso de mis datos segun la GDPR" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contTarjeta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tit_tarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_numero_de_tarjeta_opc_pago" />

            <EditText
                android:id="@+id/num_tarj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:maxLength="16"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tit_num_seg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_numero_de_seguridad_opc_pago" />

            <EditText
                android:id="@+id/num_seg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:maxLength="3"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tit_fecha_cad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_fecha_caducidad_opc_pago" />

            <EditText
                android:id="@+id/fecha_caduc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_mm_aa_opc_pago"
                android:inputType="date"
                android:maxLength="5"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/checkBox_tarj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Acepto el uso de mis datos segun la GDPR" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contEfec"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/txt_facil_pago_opc_pago" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_dispongo_de_cambio_opc_pago" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>